public/stylesheets/scaffold.css
body {
  background-color: #FEFEFE;
  color: #333;
  margin: 0 0 -20px
}

.footer {
  background-color: #EFEFEF;
  padding-top:20px;
  padding-bottom:10px;
  border-top: 1px solid #DFDFDF;
}

.copyright {
	float:right;
	font-size:0.8em;
	color:#666;
}

div.login {
	border:1px solid #666;
	background-color:#eee;
	padding-top:1em;
	padding-left:8%;
	padding-bottom:1em;
	max-width:50%;
	margin-right:30%;
	margin-left:30%;
	margin-bottom:3em;
}

#header .links {
    float:left;
    margin-left:10px;
    margin-top:5px;
    color:#fefefe;
}

#header .links a {
    color:#fefefe;
    text-decoration:none;
    padding: 0px 2px 0px 5px
}

.blog_title {
	background:#333 url("/images/header.png");
	text-align:right;
	height:80px;
	margin-top:-8px;
	margin-left:-8px;
	margin-right:-8px;
	margin-bottom:50px;
}

.back_header{
	text-align:left;
	float:left;
	margin-left:15px;
	margin-top:40px;
}


body, p, ol, ul, td {
	font-family: 'avant garde','century gothic',georgia,sans-serif;
	font-size:   18px;
	line-height: 1.5em;
}

pre {
    background-color:#EEEEEE;
    border:1px solid #333333;
    font-family:monospace;
    font-size:12px;
    margin:0px 50px;
    padding:10px;
}

a { color: #000; }
a:visited { color: #666; }
a:hover { color: #fff; background-color:#000; }

.flash {
	margin-left:-8px;
	margin-right:-8px;
	margin-top:-50px;
	margin-bottom:50px;
	padding:0.5em;
	text-align:center;
}

.flash.notice {
	background-color:lightGreen;
	color:green;
}

.fieldWithErrors {
  padding: 2px;
  background-color: red;
  display: table;
}

#errorExplanation {
  width: 400px;
  border: 2px solid red;
  padding: 7px;
  padding-bottom: 12px;
  margin-bottom: 20px;
  background-color: #f0f0f0;
}

#errorExplanation h2 {
  text-align: left;
  font-weight: bold;
  padding: 5px 5px 5px 15px;
  font-size: 12px;
  margin: -7px;
  background-color: #c00;
  color: #fff;
}

#errorExplanation p {
  color: #333;
  margin-bottom: 0;
  padding: 5px;
}

#errorExplanation ul li {
  font-size: 12px;
  list-style: square;
}

/* POSTS */

.post{
  margin-bottom:100px;
}

.post_sidebar{
  width:15%;
  float:left;
  margin-left:10px;
  padding-right:10px;
  text-align:right;
}


.post_sidebar .time {
  font-family: georgia, sans-serif;
	color:gray;
	font-size:1.5em;
padding-top:0.3em;
}

.post_content{
  width:80%;
float:right;
}

.post_sidebar .day{
    font-size:1.5em;
    color:gray;
}

.post_sidebar .year{
    font-size: 0.7em;
    color:silver;
}

.post a.title {
	font-size:1.8em;
	line-height: 1.2em;
	display:block;
	text-decoration:none;
}


.post a.title:hover {
	background-color: #fff;
	color:#333;
}

.post span.content  {
}

.post span.content p {
	margin-left:1em;
}

.post span.content a {
	background-image:url("/images/link.gif");
	background-repeat:no-repeat;
	background-position:right center;
	padding-right:0.5em;
}

.date {
	font-family: georgia, sans-serif;
	float:right;
  color:silver;
}

.post .post_actions {
font-weight:bolder;
text-decoration:none;
float:right;
margin-right:2em;
}

.post .post_actions a {
    font-style:italic;
}

br.post_separation {
	margin-bottom:20px;
}

/* POSTS forms */

.new_post textarea, .edit_post textarea {
    font-size: 0.8em;
    width: 60%;
}

/* Comments */
/* TODO: style comment view */

#comments_header {
	text-align:right;
	height:2.6em;
	background:#333 url("/images/header_comments.png");
	border-top:1px solid black;
	display:block;
	margin-top:-2em;
	margin-left:-8px;
	margin-right:-8px;
}

.hint {font-size:0.7em;font-style:italic;color:#666;}

#comments_block h2 {color:silver;}

#comments_block{
	margin-left:-8px;
	margin-right:-8px;
	background-color:#f0f0f0;
	padding:0.5em 0px 0.5em 21%;
	border-top:1px solid black;
	font-size:0.8em;
}

#comments_block input, #comments_block textarea {font-size:0.8em;font-family:century gothic;}

/* PAGINATION */

.pagination {
  text-align: center;
  padding: .3em;
  font-size:0.8em;
}
  .pagination a, .flickr_pagination span {
    padding: .2em .5em; }
  .pagination span.disabled {
    color: #AAA; }
  .pagination span.current {
    font-weight: bold;
    color: #E98C08; }
  .pagination a {
    border: 1px solid #DDDDDD;
    color: #0063DC;
    text-decoration: none; }
   .pagination a:hover, .pagination a:focus {
      border-color: #003366;
      background: #E98C08;
      color: white; }
  .pagination .page_info {
    color: #aaa;
    padding-top: .8em; }
  .pagination .prev_page, .pagination .next_page {
    border-width: 2px; }
  .pagination .prev_page {
    margin-right: 1em; }
  .pagination .next_page {
    margin-left: 1em; }

/* ONLY FOR THE PRESENTATION */

body.presentation {
    background-color:#fefefe;
}

body.presentation h1 , body.presentation h2 {font-family: avant garde;}


body.presentation a {
    text-decoration:none;
    color:#666;
}

body.presentation a.linkedin {
    color:#56b;
}

body.presentation a:hover {
    background-color:transparent;
    color:#0397D5;
}

div.presentation {
  margin: 10% 10% 50px 20%;
}

div.gist {
  max-width:80%;
}

/* Twitts */

.twitts {
    margin-top:50px;
}

.twitts h3 {
    text-align:center;
    color: #333;
    margin-bottom:-10px;
}

.twitts p {
 margin-left:25%;
 margin-right:25%;
 line-height:1.2em;
}

.twitts .from_user {
    font-size:1.2em;
}

.twitts .created_at {
    color:silver;
    font-size:0.8em;
}

.twit {
    font-size:0.3em;
}

